--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,3 +1,7 @@
-#app {
-  background-color: red;
-}
+@import "partials/_variables";
+@import "partials/_mixins";
+@import "partials/_commons";
+@import "partials/_header";
+@import "partials/_welcome";
+@import "partials/_footer";
+@import "partials/_dashboard";
