--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -1,7 +1,8 @@
 @import "partials/_variables";
-@import "partials/_mixins";
 @import "partials/_commons";
+@import "partials/_mixins";
 @import "partials/_header";
 @import "partials/_welcome";
 @import "partials/_footer";
 @import "partials/_dashboard";
+@import "partials/_login";
