--- a/public/css/style.css
+++ b/public/css/style.css
@@ -68,7 +68,7 @@
   height: 120px;
   padding-top: 20px;
   padding-bottom: 20px;
-  background-image: linear-gradient(to bottom, #9D9D9D 0%, #fdfbfb 100%);
+  background-color: rgba(0, 0, 0, 0.03);
 }
 .home-CTA .CTA-card {
   display: inline-block;
@@ -77,7 +77,7 @@
   text-align: center;
 }
 .home-CTA .CTA-img img {
-  height: 60px;
+  height: 50px;
   margin-bottom: 5px;
 }
 .home-CTA .CTA-text h5 {
@@ -105,11 +105,11 @@
 .home-categories-carousel .carousel-container {
   display: flex;
   flex-wrap: wrap;
-  border: 2px solid #F3F3F3;
+  border: 2px solid rgba(0, 0, 0, 0.03);
 }
 .home-categories-carousel .category-card {
   margin: 10px;
-  background-color: #F3F3F3;
+  background-color: rgba(0, 0, 0, 0.03);
   border-radius: 4px;
   transition: all 0.4s;
   padding: 0 20px;
