--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,3 +10,52 @@
   padding: 0 30px;
   margin: 0 auto;
 }
+
+.login-header-top {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+.login-header-top .logout {
+  padding: 10px 50px;
+  background-color: #FFA803;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  font-weight: 700;
+}
+.login-header-top .logout a {
+  color: white;
+  text-decoration: none;
+}
+
+.register-header-top {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+.register-header-top .login {
+  padding: 10px 50px;
+  background-color: #FFA803;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  font-weight: 700;
+}
+.register-header-top .login a {
+  color: white;
+  text-decoration: none;
+}
+.register-header-top .register {
+  padding: 10px 50px;
+  background-color: #23CAD3;
+  border-radius: 5px;
+  border: none;
+  color: white;
+  font-weight: 700;
+  margin-left: 15px;
+}
+.register-header-top .register a {
+  color: white;
+  text-decoration: none;
+}
