--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,3 +10,55 @@
   padding: 0 30px;
   margin: 0 auto;
 }
+
+.space {
+  margin-top: 10%;
+}
+
+.header {
+  background-color: #FFA803;
+  color: white;
+  font-size: 20px;
+}
+
+.box {
+  margin-bottom: 40px;
+  border-left: 1px solid #FFA803;
+}
+
+.margin {
+  margin: auto;
+  margin-bottom: 50px;
+}
+
+.btn-orange {
+  color: white;
+  background-color: #FFA803;
+}
+
+.btn-orange:hover {
+  color: #FFA803;
+  background-color: white;
+  border: 1px solid #FFA803;
+}
+
+.btn-white {
+  color: #FFA803;
+  background-color: white;
+  border: 1px solid #FFA803;
+}
+
+.btn-white:hover {
+  color: white;
+  background-color: #FFA803;
+}
+
+.btn-link-orange {
+  font-weight: 400;
+  color: #FFA803;
+  text-decoration: none;
+}
+
+#return {
+  margin-left: 30%;
+}
