--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,11 +28,15 @@
   color: white;
   text-decoration: none;
 }
+.login-header-top .logout a:hover {
+  text-decoration: none;
+}
 
 .register-header-top {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  align-items: center;
+  margin: 20px 0;
 }
 .register-header-top .login {
   padding: 10px 50px;
@@ -46,6 +50,9 @@
   color: white;
   text-decoration: none;
 }
+.register-header-top .login a:hover {
+  text-decoration: none;
+}
 .register-header-top .register {
   padding: 10px 50px;
   background-color: #23CAD3;
@@ -57,6 +64,9 @@
 }
 .register-header-top .register a {
   color: white;
+  text-decoration: none;
+}
+.register-header-top .register a:hover {
   text-decoration: none;
 }
 
