--- a/resources/sass/partials/_login.scss
+++ b/resources/sass/partials/_login.scss
@@ -39,10 +39,13 @@
 }
 
 .btn-link-orange{
+    display: inline-block;
     font-weight: 400;
     color: #FFA803;
     text-decoration: none;
+    margin-top: 15px;
 }
+
 #return{
     margin-left:30%;
 }
