--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,10 +14,31 @@
 .login-header-top {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  align-items: center;
+  margin: 20px 0;
 }
 .login-header-top #logo a {
+  color: black;
+}
+.login-header-top .user-logout {
+  display: flex;
+  align-items: center;
+}
+.login-header-top .register {
+  padding: 10px 50px;
+  background-color: #23CAD3;
+  border-radius: 5px;
+  border: none;
   color: white;
+  font-weight: 700;
+  margin-left: 15px;
+}
+.login-header-top .register a {
+  color: white;
+  text-decoration: none;
+}
+.login-header-top .register a:hover {
+  text-decoration: none;
 }
 .login-header-top .logout {
   padding: 10px 50px;
@@ -40,6 +61,9 @@
   justify-content: space-between;
   align-items: center;
   margin: 20px 0;
+}
+.register-header-top #logo a {
+  color: black;
 }
 .register-header-top .login {
   padding: 10px 50px;
