--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,11 +1,32 @@
 .login-header-top {
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  align-items: center;
+  margin: 20px 0;
 
   #logo {
     a {
-      color: white;
+      color: black;
+    }
+  }
+  .user-logout {
+    display: flex;
+    align-items: center;
+  }
+  .register {
+    padding: 10px 50px;
+    background-color: $brand-heavenly;
+    border-radius: 5px;
+    border: none;
+    color: $brand-white;
+    font-weight: 700;
+    margin-left: 15px;
+    a {
+      color: $brand-white;
+      text-decoration: none;
+      &:hover {
+        text-decoration: none;
+      }
     }
   }
 
@@ -31,6 +52,11 @@
   justify-content: space-between;
   align-items: center;
   margin: 20px 0;
+  #logo {
+    a {
+      color: black;
+    }
+  }
   .login {
     padding: 10px 50px;
     background-color: $brand-orange;
