--- a/resources/sass/partials/_welcome.scss
+++ b/resources/sass/partials/_welcome.scss
@@ -148,6 +148,7 @@ $cardImage: 200px;
 // Restaurants Section
 .home-restaurants {
   text-align: center;
+  padding-bottom: 50px;
 
   .restaurant-container {
     text-align: left;
