--- a/resources/sass/partials/_header.scss
+++ b/resources/sass/partials/_header.scss
@@ -1,53 +1,42 @@
-.login-header-top {
+
+.user-logout {
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  margin: 20px 0;
-
-  #logo {
-    a {
-      color: black;
-    }
-  }
-  .user-logout {
-    display: flex;
-    align-items: center;
-  }
-  .register {
-    padding: 10px 50px;
-    background-color: $brand-heavenly;
-    border-radius: 5px;
-    border: none;
-    color: $brand-white;
-    font-weight: 700;
-    margin-left: 15px;
-    a {
-      color: $brand-white;
-      text-decoration: none;
-      &:hover {
-        text-decoration: none;
-      }
-    }
-  }
-
-  .logout {
-    padding: 10px 50px;
-    background-color: $brand-orange;
-    border-radius: 5px;
-    border: none;
-    color: $brand-white;
-    font-weight: 700;
-    a {
-      color: $brand-white;
-      text-decoration: none;
-      &:hover {
-        text-decoration: none;
-      }
-    }
-  }
 }
+// .register {
+//   padding: 10px 50px;
+//   background-color: $brand-heavenly;
+//   border-radius: 5px;
+//   border: none;
+//   color: $brand-white;
+//   font-weight: 700;
+//   margin-left: 15px;
+//   a {
+//     color: $brand-white;
+//     text-decoration: none;
+//     &:hover {
+//       text-decoration: none;
+//     }
+//   }
+// }
 
-.register-header-top {
+// .logout {
+//   padding: 10px 50px;
+//   background-color: $brand-orange;
+//   border-radius: 5px;
+//   border: none;
+//   color: $brand-white;
+//   font-weight: 700;
+//   a {
+//     color: $brand-white;
+//     text-decoration: none;
+//     &:hover {
+//       text-decoration: none;
+//     }
+//   }
+// }
+
+.login-header-top, .register-header-top {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -55,37 +44,46 @@
   #logo {
     a {
       color: black;
+      transition: all 0.4s;   
+      &:hover {
+        text-decoration: none;
+        color: $brand-orange;
+      }
     }
   }
+
   .login {
-    padding: 10px 50px;
+    padding: 8px 50px;
     background-color: $brand-orange;
     border-radius: 5px;
     border: none;
+    border: 2px solid $brand-orange;
     color: $brand-white;
     font-weight: 700;
-    a {
-      color: $brand-white;
+    transition: all 0.4s;
+
+    &:hover {
       text-decoration: none;
-      &:hover {
-        text-decoration: none;
-      }
+      color: $brand-orange;
+      background-color: $brand-white;
     }
   }
+
   .register {
-    padding: 10px 50px;
+    padding: 8px 50px;
     background-color: $brand-heavenly;
     border-radius: 5px;
     border: none;
+    border: 2px solid $brand-heavenly;
     color: $brand-white;
     font-weight: 700;
     margin-left: 15px;
-    a {
-      color: $brand-white;
+    transition: all 0.4s;
+
+    &:hover {
       text-decoration: none;
-      &:hover {
-        text-decoration: none;
-      }
+      color: $brand-heavenly;
+      background-color: $brand-white;
     }
   }
 }
