--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -8,4 +8,4 @@
 @import '~bootstrap/scss/bootstrap';
 
 // Fontawesome
-@import '~@fortawesome/fontawesome-free/css/all.css';
+//@import '~@fortawesome/fontawesome-free/css/all.css';
