--- a/resources/sass/partials/_welcome.scss
+++ b/resources/sass/partials/_welcome.scss
@@ -125,6 +125,7 @@ $cardImage: 200px;
     .carousel-container {
       display: flex;
       flex-wrap: wrap;
+      justify-content: center;
 
       border: 2px solid $homeGrey;
     }
@@ -179,10 +180,31 @@ $cardImage: 200px;
           box-shadow: 0 0 12px grey;
         }
 
+        &:hover .card-title {
+          text-decoration-color: $brand-orange;
+        }
+        &:hover .card-address>i {
+          color: $brand-orange;
+        }
+        &:hover .card-image {
+          transform: scale(1.08);
+        }
+        
+        * {
+          color: inherit;
+          &:hover {
+            text-decoration: none;
+          }
+        }
+        .image-container {
+          height: $cardImage;
+          overflow: hidden;
+        }
+
         .card-image {
           width: 100%;
-          max-height: $cardImage;
           object-fit: cover;
+          transition: all 0.9s;
         }
         
         .card-body {
@@ -200,10 +222,6 @@ $cardImage: 200px;
           text-decoration: peru solid overline;
           text-decoration-skip: objects;
           transition: all 0.4s;
-
-          &:hover {
-            text-decoration-color: $brand-orange;
-          }
         }
         
         .card-delivery {
@@ -221,6 +239,10 @@ $cardImage: 200px;
         .card-address {
           color: grey;
           margin-bottom: 0.4em;
+
+          i {
+            transition: all 0.4s;
+          }
         }
 
         .card-text {
