creazione file success/checkout scss

--- a/resources/sass/style.scss
+++ b/resources/sass/style.scss
@@ -7,3 +7,5 @@
 @import "partials/_dashboard";
 @import "partials/_login";
 @import "partials/_restaurant";
+@import "partials/_success";
+@import "partials/_checkout";
