Vista Ristorante + Carrello

--- a/resources/sass/partials/_welcome.scss
+++ b/resources/sass/partials/_welcome.scss
@@ -145,7 +145,7 @@ $cardImage: 200px;
     }
 
     .cardActive {
-      box-shadow: 0 0 6px $brand-orange;
+      box-shadow: 0 0 10px darkgrey;
     }
 
     .carousel-img {
