--- a/public/css/style.css
+++ b/public/css/style.css
@@ -523,14 +523,11 @@ footer #footer-bottom .mycontainer img {
 .restaurant-jumbotron {
   position: relative;
   height: 400px;
-  overflow: hidden;
-  box-shadow: 0 4px 15px -2px gray;
-  background-color: black;
-  background-position-x: right;
-  background-position-y: top;
   background-repeat: no-repeat;
-  background-size: 85% auto;
-  background-attachment: fixed;
+  background-attachment: center;
+  background-position: center;
+  background-size: cover;
+  background-color: black;
   z-index: 1;
 }
 .restaurant-jumbotron:before {
@@ -541,7 +538,7 @@ footer #footer-bottom .mycontainer img {
   z-index: -1;
   top: 0;
   left: 0;
-  background: linear-gradient(35deg, #0a0a0a 30%, rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(35deg, #0a0a0a 20%, transparent 100%);
 }
 .restaurant-jumbotron h1 {
   color: white;
@@ -573,7 +570,7 @@ footer #footer-bottom .mycontainer img {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .restaurant-container {
