--- a/resources/sass/partials/_restaurant.scss
+++ b/resources/sass/partials/_restaurant.scss
@@ -5,14 +5,12 @@ $cardImage: 200px;
 .restaurant-jumbotron {
   position: relative;
   height: 400px;
-  overflow: hidden;
-  box-shadow: 0 4px 15px -2px gray;
-  background-color: black;
-  background-position-x: right;
-  background-position-y: top;
   background-repeat: no-repeat;
-  background-size: 85% auto;
-  background-attachment: fixed;
+  background-attachment: center;
+  background-position: center;
+  background-size: cover;
+  background-color: black;
+  // background-attachment: fixed;
   z-index: 1;
 
   &:before {
@@ -23,7 +21,7 @@ $cardImage: 200px;
     z-index: -1;
     top: 0;
     left: 0;
-    background: linear-gradient(35deg, rgba(10,10,10,1 ) 30%,rgba(0,0,0,0) 100%);
+    background: linear-gradient(35deg, rgba(10,10,10,1 ) 20%,transparent 100%);
 }
   
   h1 {
@@ -57,7 +55,7 @@ $cardImage: 200px;
 		left: 0;
 		width: 100%;
 		height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.1);
   }
 }
 // /Jumbotron Section
@@ -65,7 +63,6 @@ $cardImage: 200px;
 .restaurant-container {
   display: flex;
   height: 100%;
-  // margin-top: 30px;
 }
 
 // Menu Section
