--- a/public/css/style.css
+++ b/public/css/style.css
@@ -501,6 +501,7 @@ footer #footer-bottom .mycontainer img {
   color: #FFA803;
   background-color: white;
   border: 1px solid #FFA803;
+  margin-right: 25px;
 }
 
 .btn-white:hover {
@@ -517,5 +518,12 @@ footer #footer-bottom .mycontainer img {
 }
 
 #return {
-  margin-left: 30%;
+  margin-left: 10%;
+}
+
+@media screen and (max-width: 767px) {
+  .box {
+    border-top: 1px solid #FFA803;
+    border-left: none;
+  }
 }
