--- a/resources/sass/partials/_restaurant.scss
+++ b/resources/sass/partials/_restaurant.scss
@@ -59,7 +59,7 @@ $cardImage: 200px;
 }
 // /Jumbotron Section
 
-.restaurant-container {
+.show-restaurant-container {
   display: flex;
   height: 100%;
 }
