--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,9 +129,13 @@
   padding-bottom: 20px;
   background-color: rgba(0, 0, 0, 0.03);
 }
+.home-CTA .mycontainer {
+  display: flex;
+  justify-content: space-between;
+}
 .home-CTA .CTA-card {
   display: inline-block;
-  width: 33%;
+  width: 32%;
   height: 100%;
   text-align: center;
 }
@@ -169,18 +173,25 @@
   border: 2px solid rgba(0, 0, 0, 0.03);
 }
 .home-categories-carousel .category-card {
+  display: inline-block;
   margin: 10px;
-  background-color: rgba(0, 0, 0, 0.03);
+  background-color: rgba(239, 242, 244, 0.8);
+  border: 2px solid rgba(0, 0, 0, 0.03);
   border-radius: 4px;
   transition: all 0.4s;
-  padding: 0 20px;
+  width: 190px;
+  flex: 1 0 auto;
 }
 .home-categories-carousel .category-card:hover {
   cursor: pointer;
   box-shadow: 0 0 6px darkgrey;
 }
 .home-categories-carousel .cardActive {
-  box-shadow: 0 0 10px darkgrey;
+  border: 2px solid rgba(255, 168, 3, 0.7);
+  box-shadow: 0 0 10px #FFA803;
+}
+.home-categories-carousel .cardActive:hover {
+  box-shadow: 0 0 10px #FFA803;
 }
 .home-categories-carousel .carousel-img {
   width: 60px;
@@ -661,15 +672,13 @@ footer #copyright span {
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  width: 70%;
-  padding: 30px 20px 30px 0;
+  padding: 30px 0;
   text-align: left;
 }
 .menu-container .dish-card {
-  width: 90%;
   display: flex;
   flex-direction: row;
-  height: 160px;
+  height: 175px;
   margin: 15px 0;
   border-radius: 4px;
   overflow: hidden;
@@ -710,7 +719,7 @@ footer #copyright span {
   display: flex;
 }
 .menu-container .dish-card .dish-description {
-  padding-right: 15px;
+  padding-right: 10px;
   width: 80%;
 }
 .menu-container .dish-card .card-title {
@@ -736,7 +745,7 @@ footer #copyright span {
   transition: 0.6s all;
 }
 .menu-container .dish-card .add-dish {
-  width: 20%;
+  width: 27%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -744,7 +753,7 @@ footer #copyright span {
 }
 .menu-container .dish-card .add-dish i {
   margin-bottom: 12px;
-  padding: 10px;
+  padding: 14px;
   font-size: 20px;
   color: white;
   background-color: #FFA803;
@@ -757,11 +766,16 @@ footer #copyright span {
   box-shadow: 0 0 7px #FFA803;
 }
 
+.mobile-cart {
+  display: none;
+}
+
 .cart-container {
-  width: 30%;
   position: sticky;
   top: 0;
   height: 100%;
+  margin-top: 45px;
+  margin-bottom: 45px;
   padding: 20px 10px 10px;
   box-shadow: 0 0 7px lightgrey;
 }
@@ -798,7 +812,7 @@ footer #copyright span {
   margin-top: 10px;
   padding: 8px 27px 5px 20px;
   font-weight: bold;
-  font-size: 15px;
+  font-size: 17px;
 }
 .cart-container .show-cart {
   padding: 8px;
@@ -840,9 +854,51 @@ footer #copyright span {
   font-size: 13px;
 }
 .cart-container .show-cart .dish-price {
+  display: inline-block;
+  width: 21%;
+  text-align: right;
   font-size: 14px;
 }
 
+@media only screen and (max-width: 720px) {
+  .menu-container .dish-card {
+    height: 140px;
+  }
+  .menu-container .dish-card .card-title {
+    margin-bottom: 0.2em;
+  }
+  .menu-container .dish-card .card-text {
+    -webkit-line-clamp: 2;
+  }
+
+  .home-CTA {
+    height: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .home-CTA .CTA-card .CTA-img img {
+    height: 40px;
+  }
+  .home-CTA .CTA-card .CTA-text h5 {
+    font-size: 1em;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .menu-container .dish-card .image-container {
+    max-width: 30%;
+    overflow: hidden;
+    height: 100px;
+    align-self: center;
+    padding-left: 10px;
+  }
+  .menu-container .dish-card .image-container .card-image {
+    width: 100%;
+    height: 100%;
+    -o-object-fit: cover;
+       object-fit: cover;
+    transition: all 0.9s;
+  }
+}
 main #success {
   padding: 30px 0px 60px 0px;
   background-color: white;
