--- a/resources/sass/partials/_restaurant.scss
+++ b/resources/sass/partials/_restaurant.scss
@@ -1,4 +1,4 @@
-$cardHeight: 160px;
+$cardHeight: 175px;
 $cardImage: 200px;
 
 // Jumbotron Section
@@ -69,12 +69,10 @@ $cardImage: 200px;
   position: relative;
   display: flex;
   flex-wrap: wrap;
-  width: 70%;
-  padding: 30px 20px 30px 0;
+  padding: 30px 0;
   text-align: left;
   
   .dish-card {
-      width: 90%;
       display: flex;
       flex-direction: row;
       height: $cardHeight;
@@ -121,7 +119,7 @@ $cardImage: 200px;
         display: flex;
       }
       .dish-description {
-        padding-right: 15px;
+        padding-right: 10px;
         width: 80%;
       }
       
@@ -149,7 +147,7 @@ $cardImage: 200px;
       }
 
       .add-dish {
-        width: 20%;
+        width: 27%;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -157,11 +155,10 @@ $cardImage: 200px;
         
         i {
           margin-bottom: 12px;
-          padding: 10px;
+          padding: 14px;
           font-size: 20px;
           color: white;
           background-color: $brand-orange;
-          // border: 3px solid $brand-orange;
           border-radius: 4px;
           transition: all 0.4s;
 
@@ -177,98 +174,163 @@ $cardImage: 200px;
 // /Menu Section
 
 // Cart Section
-  .cart-container {
-    width: 30%;
-    position: sticky;
-    top: 0;
-    height: 100%;
-    padding: 20px 10px 10px;
-    box-shadow: 0 0 7px lightgrey;
-  
-    .checkout-restaurant {
-      text-align: center;
-      margin: 5px 0 25px;
-      
-      .home-btn {
-        padding: 6px 32%;
-        &:hover {
-          background-color: lighten($brand-orange, 5%);
-          box-shadow: 0 0 7px $brand-orange;
-        }
+.mobile-cart {
+  display: none;
+}
+
+.cart-container {
+  position: sticky;
+  top: 0;
+  height: 100%;
+  margin-top: 45px;
+  margin-bottom: 45px;
+  padding: 20px 10px 10px;
+  box-shadow: 0 0 7px lightgrey;
+
+  .checkout-restaurant {
+    text-align: center;
+    margin: 5px 0 25px;
+    
+    .home-btn {
+      padding: 6px 32%;
+      &:hover {
+        background-color: lighten($brand-orange, 5%);
+        box-shadow: 0 0 7px $brand-orange;
       }
-      .off-btn {
+    }
+    .off-btn {
+      background-color: lighten($brand-orange, 20%);
+      border-color: lighten($brand-orange, 20%);
+      &:hover {
         background-color: lighten($brand-orange, 20%);
-        border-color: lighten($brand-orange, 20%);
-        &:hover {
-          background-color: lighten($brand-orange, 20%);
-          box-shadow: none;
-        }
-      }
-    }
-
-    .empty-cart {
-      display: inline-block;
-      width: 100%;  
-      margin-top: 10px;
-      padding-bottom: 10px;
-      text-align: center;
-      color: darkgrey;
-    }
-
-    .total-cart {
-      display: flex;
-      justify-content: space-between;
-      margin-top: 10px;
-      padding: 8px 27px 5px 20px;
-      font-weight: bold;
-      font-size: 15px;
-    }
-
-    .show-cart {
-      padding: 8px;
-      border-bottom: 2px solid rgba(157, 157, 157, 0.2);
-      border-radius: 10px;
-
-      .quantity-section {
-        display: inline-block;
-        width: 25%;
-
-        .quantity-btn {
-          display: inline-block;
-          width: 20px;
-          height: 20px;
-          text-align: center;
-          margin-right: 2px;
-          font: 13px Arial, sans-serif;
-          font-weight: bold;
-          background-color: white;
-          color: $brand-orange;
-          border: 2px solid $brand-orange;
-          border-radius: 100%;
-          transition: all 0.4s;
-  
-          &:hover {
-            cursor: pointer;
-            background-color: $brand-orange;
-            color: white;
-          }
-        }
-        .plus-sign {
-         line-height: 1.34em;
-        }
-        .quantity-number {
-          margin-right: 2px;
-        }
-      }
-
-      .dish-name {
-        display: inline-block;
-        width: 50%;
-        font-size: 13px;
-      }
-      .dish-price {
-        font-size: 14px;
+        box-shadow: none;
       }
     }
   }
+
+  .empty-cart {
+    display: inline-block;
+    width: 100%;  
+    margin-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    color: darkgrey;
+  }
+
+  .total-cart {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    padding: 8px 27px 5px 20px;
+    font-weight: bold;
+    font-size: 17px;
+  }
+
+  .show-cart {
+    padding: 8px;
+    border-bottom: 2px solid rgba(157, 157, 157, 0.2);
+    border-radius: 10px;
+
+    .quantity-section {
+      display: inline-block;
+      width: 25%;
+
+      .quantity-btn {
+        display: inline-block;
+        width: 20px;
+        height: 20px;
+        text-align: center;
+        margin-right: 2px;
+        font: 13px Arial, sans-serif;
+        font-weight: bold;
+        background-color: white;
+        color: $brand-orange;
+        border: 2px solid $brand-orange;
+        border-radius: 100%;
+        transition: all 0.4s;
+
+        &:hover {
+          cursor: pointer;
+          background-color: $brand-orange;
+          color: white;
+        }
+      }
+      .plus-sign {
+        line-height: 1.34em;
+      }
+      .quantity-number {
+        margin-right: 2px;
+      }
+    }
+
+    .dish-name {
+      display: inline-block;
+      width: 50%;
+      font-size: 13px;
+    }
+    .dish-price {
+      display: inline-block;
+      width: 21%;
+      text-align: right;
+      font-size: 14px;
+    }
+  }
+}
 // /Cart Section
+
+//Media Query
+
+@media only screen and (max-width: 720px) {
+  .menu-container {
+    .dish-card {
+      height: 140px;
+      .card-title {
+        margin-bottom: 0.2em;
+      }
+
+      .card-text {
+        -webkit-line-clamp: 2;
+      }
+    }
+  }
+  .home-CTA {
+    height: auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    .CTA-card {
+      .CTA-img {
+        img {
+          height: 40px;
+        }
+      }
+      .CTA-text {
+        h5 {
+          font-size: 1em;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .menu-container {
+    .dish-card {
+      // height: 140px;
+
+      .image-container {
+        max-width: 30%;
+        overflow: hidden;
+        height: 100px;
+        align-self: center;
+        padding-left: 10px;
+
+        .card-image {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          transition: all 0.9s;
+        }
+      }
+    }
+  }
+}
